解决一些bug,升级到1.0.5

--- a/YPMiddlewareDemo/Podfile
+++ b/YPMiddlewareDemo/Podfile
@@ -8,6 +8,6 @@ target 'YPMiddlewareDemo' do
   use_frameworks!
 
   # Pods for YPMiddlewareDemo
-  pod 'YPMiddleware'
+  # pod 'YPMiddleware'
   
 end
